--- a/docs/rfc/rfc-3-stake-delegation-requirements.adoc
+++ b/docs/rfc/rfc-3-stake-delegation-requirements.adoc
@@ -67,112 +67,224 @@ granted and all penalties are imposed.
 
 === Design Factors Analysis
 
-During the design, we have considered several different factors that impact the performance and the security of the proposed solution. We are going to discuss them in more detail in this section.
+During the design, we have considered several different factors that impact the
+performance and the security of the proposed solution. We are going to discuss
+them in more detail in this section.
 
 ==== Operating
 
-Operating is the first of the analyzed factors. It has the greatest influence on the performance of the solution as it is strictly associated with network throughput. We have analyzed the following operating strategies and their impact on the proposed solution.
+Operating is the first of the analyzed factors. It has the greatest influence on
+the performance of the solution as it is strictly associated with network
+throughput. We have analyzed the following operating strategies and their impact
+on the proposed solution.
 
 ===== Atomic Operating
 
-The atomic operating is an operating strategy that allows only for strict stake where an operator performs one staking operation on time. Such operation locks the stake and no other operations can be done until the end of the current operation. This ensures that the stake cannot be changed during on-stake operation. Hence, we are achieving a high level of stake protection.
+The atomic operating is an operating strategy that allows only for strict stake
+where an operator performs one staking operation on time. Such operation locks
+the stake and no other operations can be done until the end of the current
+operation. This ensures that the stake cannot be changed during on-stake
+operation. Hence, we are achieving a high level of stake protection.
 
-The downside of this solution is that the network throughput is strongly limited as the maximal number of possible concurrent operations is TOTAL_SUPPLY / MINIMUM_STAKE.
+The downside of this solution is that the network throughput is strongly limited
+as the maximal number of possible concurrent operations is TOTAL_SUPPLY /
+MINIMUM_STAKE.
 
 ===== Multi-Operating
 
-Second, analyzed operating strategy is multi-operating where the number of on-stake operations is not limited. Using this strategy an operator can perform as many on-stake operations as possible and is only limited by the stake that is delegated to him. In other words, an operator cannot perform a single on-stake operation with more than his delegates stake but can simultaneously execute an arbitrary number of operations with the same delegated stake. Therefore, the multi-operating strategy achieves the highest possible network throughput.
+Second, analyzed operating strategy is multi-operating where the number of
+on-stake operations is not limited. Using this strategy an operator can perform 
+as many on-stake operations as possible and is only limited by the stake that is
+delegated to him. In other words, an operator cannot perform a single on-stake
+operation with more than his delegates stake but can simultaneously execute an
+arbitrary number of operations with the same delegated stake. Therefore, the
+multi-operating strategy achieves the highest possible network throughput.
 
-Unfortunately, the multi-operating strategy can lead to severe security and economic ramifications. For example, with such an unlimited operating an operator can start such high number of on-stake operations that the combined penalties would be larger than the total owner stake hence opening a possibility to quickly deplete all of the owner's stake.
+Unfortunately, the multi-operating strategy can lead to severe security and
+economic ramifications. For example, with such an unlimited operating an
+operator can start such high number of on-stake operations that the combined
+penalties would be larger than the total owner stake hence opening a possibility
+to quickly deplete all of the owner's stake.
 
 ===== Atomic Multi-Operating
 
-The third analyzed strategy is a hybrid approach where we combine atomic operating with multi-operating. This strategy enforces that when an on-stake operation is performed, a portion of a delegated stake is locked (e.g. MINIMUM_STAKE if the penalty for misbehaving is lower than the MINIMUM_STAKE or MAXIMAL_PENALTY otherwise) and cannot be used for other operations until the end of the current operation. Hence, achieving the stake atomicity. The operator can use the remaining delegated stake for other concurrent on-stake operations. Therefore, achieving the multi-operating feature. No more operations are permitted when the amount of unlocked stake is lower than the required portion of a stake to be locked.
+The third analyzed strategy is a hybrid approach where we combine atomic
+operating with multi-operating. This strategy enforces that when an on-stake
+operation is performed, a portion of a delegated stake is locked (e.g.
+MINIMUM_STAKE if the penalty for misbehaving is lower than the MINIMUM_STAKE or
+MAXIMAL_PENALTY otherwise) and cannot be used for other operations until the end
+of the current operation. Hence, achieving the stake atomicity. The operator can
+use the remaining delegated stake for other concurrent on-stake operations.
+Therefore, achieving the multi-operating feature. No more operations are
+permitted when the amount of unlocked stake is lower than the required portion
+of a stake to be locked.
 
-This strategy protects the stake of the owner from being rapidly depleted, unlike the pure multi-operating. It also enables higher network throughput than the pure atomic operating strategy. 
+This strategy protects the stake of the owner from being rapidly depleted,
+unlike the pure multi-operating. It also enables higher network throughput than
+the pure atomic operating strategy. 
 
 ==== MINIMUM_STAKE
 
-The MINIMUM_STAKE plays a crucial role in the process of on-stake operations. It is the limiting factor of how many concurrent operations an operator take part. Therefore, we have also analyzed two possible scenarios for setting MINIMUM_STAKE.
+The MINIMUM_STAKE plays a crucial role in the process of on-stake operations. It
+is the limiting factor of how many concurrent operations an operator take part.
+Therefore, we have also analyzed two possible scenarios for setting
+MINIMUM_STAKE.
 
 ===== Static MINIMUM_STAKE
 
-The static approach towards MINIMUM_STAKE is that its value does not change during the lifetime of the system. It can only be updated during the hard forks. This makes the system easier to implement but less flexible for external economic factors. During the lifetime of the system, the costs of operations might change significantly and rapidly, limiting the affordability of further operations. 
+The static approach towards MINIMUM_STAKE is that its value does not change
+during the lifetime of the system. It can only be updated during the hard forks.
+This makes the system easier to implement but less flexible for external
+economic factors. During the lifetime of the system, the costs of operations
+might change significantly and rapidly, limiting the affordability of further
+operations. 
 
 ===== Dynamic MINIMUM_STAKE
 
-Dynamic MINIMUM_STAKE enables flexible changes of the MINIMUM_STAKE value during the lifetime of the system without forcing a hard fork. This approach makes the system more flexible for adjusting the on-stake operating prices and makes the system more rigid against external economic factors. The downside of this approach is its implementational and operational complexity.
+Dynamic MINIMUM_STAKE enables flexible changes of the MINIMUM_STAKE value during
+the lifetime of the system without forcing a hard fork. This approach makes the
+system more flexible for adjusting the on-stake operating prices and makes the
+system more rigid against external economic factors. The downside of this
+approach is its implementational and operational complexity.
 
 ==== Undelegation
 
-Last analyzed factor is undelegation strategy. The way how the stake delegation is canceled plays a crucial role in protecting owners stake against misbehaving operators.
+Last analyzed factor is undelegation strategy. The way how the stake delegation
+is canceled plays a crucial role in protecting owners stake against misbehaving
+operators.
 
 ===== Instant Undelegation
 
-The first undelegation strategy is an instant undelegation. It is a straightforward approach where an owner or an operator revokes the stake delegation. When such undelegation is invoked an operator instantly stops all on-stake operations and the stake is returned to the owner. As a result of stopping all of the on-stake operations, the resulting penalties are imposed on the owner's stake. Here we can distinguish between undelegation penalties being treated as inactivity, misbehavior, or as a separate type of penalty - which will be discussed in the penalization section. 
+The first undelegation strategy is an instant undelegation. It is a 
+straightforward approach where an owner or an operator revokes the stake
+delegation. When such undelegation is invoked an operator instantly stops all
+on-stake operations and the stake is returned to the owner. As a result of
+stopping all of the on-stake operations, the resulting penalties are imposed on
+the owner's stake. Here we can distinguish between undelegation penalties being
+treated as inactivity, misbehavior, or as a separate type of penalty - which
+will be discussed in the penalization section. 
 
 ===== Delayed Undelegation
 
-The second strategy for the undelegation is a delayed undelegation. When a stake delegation is revoked using this strategy, the delegated stake is locked for an UNDELEGATION_TIMEOUT period. Starting from the undelegation initiation and during the UNDELEGATION_TIMEOUT no new on-stake operations are allowed (any attempt should be rejected). All of the already started on-stake operations that will finish before the UNDELEGATION_TIMOUT are treated as usual and all rewards and penalties are calculated normally. If an on-stake operation will not end before UNDELEGATION_TIMEOUT period it needs to be terminated instantly at the end of the timeout and the owner stake will be penalized accordingly to the penalization strategy. Therefore, the safest option here is to have UNDELEGATION_TIMEOUT as long as necessary to safely end all (or at least most) of the ongoing operations. After the UNDELEGATION_TIMEOUT the delegated stake is unlocked and is returned to the owner.
+The second strategy for the undelegation is a delayed undelegation. When a stake
+delegation is revoked using this strategy, the delegated stake is locked for an
+UNDELEGATION_TIMEOUT period. Starting from the undelegation initiation and
+during the UNDELEGATION_TIMEOUT no new on-stake operations are allowed (any
+attempt should be rejected). All of the already started on-stake operations that
+will finish before the UNDELEGATION_TIEMOUT are treated as usual and all rewards
+and penalties are calculated normally. If an on-stake operation will not end
+before UNDELEGATION_TIMEOUT period it needs to be terminated instantly at the
+end of the timeout and the owner stake will be penalized accordingly to the
+penalization strategy. Therefore, the safest option here is to have
+UNDELEGATION_TIMEOUT as long as necessary to safely end all of the ongoing
+operations. After the UNDELEGATION_TIMEOUT the delegated stake is unlocked and
+is returned to the owner.
 
 ==== Penalisation
 
-Last key factor impacting the performance of the solution and its security is the cost of undelegation. The impact of the stake delegation on the mechanics and economy of the solution is strictly related to the way how the undelegation happens. In this section, we will discuss several undelegation penalization strategies.
+Last key factor impacting the performance of the solution and its security is
+the cost of undelegation. The impact of the stake delegation on the mechanics
+and economy of the solution is strictly related to the way how the undelegation
+happens. In this section, we will discuss several undelegation penalization
+strategies.
 
-It is important to emphasize that the penalization happens only when an undelegation hits an ongoing operation and that operation will not end before an effective undelegation. Therefore, any operation that will end before the UNDELEGATION_TIMOUT will not be penalized.
+It is important to emphasize that the penalization happens only when an
+undelegation hits an ongoing operation and that operation will not end before an
+effective undelegation. Therefore, any operation that will end before the
+UNDELEGATION_TIMOUT will not be penalized.
 
 ===== Inactive (zero cost)
 
-First penalization strategy is to treat the stake undelegation on an ongoing operation as an operators inactivity. This strategy does not require excessive mechanics as the network should verify in every step the eligibility of the operator to participate in an operation. From the perspective of the owner and impact on the stake, this would be the most beneficial strategy as the stake would not be impacted as the result of the undelegation.
+First penalization strategy is to treat the stake undelegation on an ongoing
+operation as an operators inactivity. This strategy does not require excessive
+mechanics as the network should verify in every step the eligibility of the
+operator to participate in an operation. From the perspective of the owner and
+impact on the stake, this would be the most beneficial strategy as the stake
+would not be impacted as the result of the undelegation.
 
-The downside of this approach is that it could be used as a fairly cheap way for an owner to resign from an unfavorable operation due to the low cost (virtually zero cost) of the inactivity penalty. This could lead to major instability of the network operations.
+The downside of this approach is that it could be used as a fairly cheap way for
+an owner to resign from an unfavorable operation due to the low cost (virtually
+zero cost) of the inactivity penalty. This could lead to major instability of
+the network operations.
 
 ===== Misbehaving (normal cost)
 
-Second penalization strategy is to treat an operator as misbehaving as the result of the undelegation. The undelegation happens on-chain, therefore, we can perform normal penalization as we have an on-chain proof. This strategy is most beneficial for the network as it protects other participants from the undelegation abuse.
+Second penalization strategy is to treat an operator as misbehaving as the
+result of the undelegation. The undelegation happens on-chain, therefore, we can
+perform normal penalization as we have an on-chain proof. This strategy is most
+beneficial for the network as it protects other participants from the
+undelegation abuse.
 
-The downside of this strategy is its implementation complexity as it requires tracking the undelegation events and aligning them with the inner workings of a particular operation (including adding an internal mechanism for proofing and validating an external undelegation event). 
+The downside of this strategy is its implementation complexity as it requires
+tracking the undelegation events and aligning them with the inner workings of a
+particular operation (including adding an internal mechanism for proofing and
+validating an external undelegation event). 
 
 ===== Consequent (opportunistic cost)
 
-A third strategy is a consequent approach, where an undelegated operator is treated as an inactive until an operation fails. If the operation fails due to inactivity of the operator, he will be marked as misbehaving and the owner will be adequately penalized.
+A third strategy is a consequent approach, where an undelegated operator is
+treated as an inactive until an operation fails. If the operation fails due to
+inactivity of the operator, he will be marked as misbehaving and the owner will
+be adequately penalized.
 
 === Design Strategy
 
-Each of the analyzed factors is orthogonal and required to be a part of the designed architecture. As the goal of the proposal is to provide a solution that has high network throughput and is secure we need to eliminate less optimal strategies.
+Each of the analyzed factors is orthogonal and required to be a part of the
+designed architecture. As the goal of the proposal is to provide a solution that
+has high network throughput and is secure we need to eliminate less optimal
+strategies.
 
 ==== Operating
 
-The Atomic Operating is the strategy that has the lowest network throughput, therefore it should be rejected.
+The Atomic Operating is the strategy that has the lowest network throughput,
+therefore it should be rejected.
 
-The Multi-Operating strategy is the least secure one, therefore it should be rejected.
+The Multi-Operating strategy is the least secure one, therefore it should be
+rejected.
 
-The Atomic Multi-Operating strategy is the most optimal one as it provides higher network throughput than the Atomic Operating and higher security than the Multi-Operating. Therefore it is the best choice.
+The Atomic Multi-Operating strategy is the most optimal one as it provides
+higher network throughput than the Atomic Operating and higher security than the
+Multi-Operating. Therefore it is the best choice.
 
 ==== MINIMUM_STAKE
 
-Both dynamic and static MINIMUM_STAKE strategies are valid ones and do not influence the performance of the network heavily. The dynamic one has an advantage over static one for being more resilient against external factors but for the cost of increased complexity. Therefore, a more optimal choice would be the dynamic MINIMUM_STAKE strategy.
+Both dynamic and static MINIMUM_STAKE strategies are valid ones and do not
+influence the performance of the network heavily. The dynamic one has an
+advantage over static one for being more resilient against external factors but
+for the cost of increased complexity. Therefore, a more optimal choice would be
+the dynamic MINIMUM_STAKE strategy.
 
 ==== Undelegation
 
-The Instant Undelegation is associated with high-security risks and in the case of a deliberate operators misbehavior can lead to sever owner stake penalization. Therefore, it should be rejected.
+The Instant Undelegation is associated with high-security risks and in the case
+of a deliberate operators misbehavior can lead to sever owner stake
+penalization. Therefore, it should be rejected.
 
-The Delayed Undelegation bares lower security risk and should be perceived as the best choice.
+The Delayed Undelegation bares lower security risk and should be perceived as
+the best choice.
 
 ==== Penalisation
 
-Both Consequent and Misbehaving Penalisation strategies have an adequate influence on the performance and the security of the solution. The Consequent Penalisation tends to be more liberal and might lead to minor abuse but its impact on the network throughput is minimal. The Misbehaving Penalisation is more strict and might enforce more conservative behavior of the operators.
+Both Consequent and Misbehaving Penalisation strategies have an adequate
+influence on the performance and the security of the solution. The Consequent
+Penalisation tends to be more liberal and might lead to minor abuse but its
+impact on the network throughput is minimal. The Misbehaving Penalisation is
+more strict and might enforce more conservative behavior of the operators.
 
-The Inactive Penalisation should be rejected as it enables zero cost end of the operation which might impact negatively on the network stability and performance.
+The Inactive Penalisation should be rejected as it enables zero cost end of the
+operation which might impact negatively on the network stability and performance.
 
 
 === Architecture
 
-Accordingly to the design strategy and the design requirements the design architecture should be based on the following combinations of strategies:
+Accordingly to the design strategy and the design requirements the design
+architecture should be based on the following combinations of strategies:
 
-Atomic Multi-Operating with Dynamic or Static MINIMUM_STAKE and Delayed Undelegation with Misbehaving or Consequent Penalisation
+Atomic Multi-Operating with Dynamic or Static MINIMUM_STAKE and Delayed
+Undelegation with Misbehaving or Consequent Penalisation
 
-Other strategies tend to be suboptimal from the perspective of both security and network throughput requirements.
+Other strategies tend to be suboptimal from the perspective of both security and
+network throughput requirements.
 
 
 == Open Questions
